--- a/css/mobile.css
+++ b/css/mobile.css
@@ -204,7 +204,7 @@
 .service-card-parent{
     padding: 100px 10px;
     margin: auto;
-    grid-gap: 0;
+    grid-gap: 1rem;
     justify-content: center;
 }
 .service-card{
@@ -212,7 +212,7 @@
     margin: auto;
     background-color: #222222;
     overflow: hidden;
-    height: 300px;
+    height: 2900px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
