--- a/css/mobile.css
+++ b/css/mobile.css
@@ -125,7 +125,7 @@
     height: 300px;
     padding: 20px;
     text-align: left;
-    text-shadow: 0px 0px 5px black;
+/*     text-shadow: 0px 0px 5px black; */
 }
 /* .hero-text h1{
     margin: 20px 0px;
@@ -268,7 +268,7 @@
     }
     .portfolio h2{
         text-align: center;
-        text-shadow: 0px 0px 2px var(--primary-color);
+/*         text-shadow: 0px 0px 2px var(--primary-color); */
     }
     
     .portfolio-content{
