--- a/css/mobile.css
+++ b/css/mobile.css
@@ -339,7 +339,7 @@
     position:absolute;
     background-attachment: fixed;
     z-index: -1100;
-    background-image: url(../img/1625739074601.webp);
+    background-image: url(img/1625739074601.webp);
     width: 100%;
     height:100%;
     background-position: center;
